[add] strip/pair method