@@ -8,11 +8,12 @@ import edu.cse587.project.two.wordcooccur.MapWritableWStr; // use inheriented Ma
 
 import java.io.IOException;
 import java.util.HashMap;
+import java.util.Map;
 import java.util.Set;
-import java.util.StringTokenizer;
 
 import org.apache.hadoop.io.IntWritable;
 //import org.apache.hadoop.io.MapWritable;
+import org.apache.hadoop.io.FloatWritable;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.mapreduce.Mapper;
@@ -23,31 +24,35 @@ import org.apache.hadoop.mapreduce.Reducer;
  * @date Dec 1st, 2011
  */
 public class MrStripe {
-	
+
 	/**
 	 * Mapper Class
 	 */
 	public static class StripeMapper 
 	extends Mapper<Object, Text, Text, MapWritableWStr>{//Class Mapper<KEYIN,VALUEIN,KEYOUT,VALUEOUT>
-		private Text term = new Text();
+		@Override
 		public void map(Object key, Text value, Context context
-				) throws IOException, InterruptedException {
-			
+		) throws IOException, InterruptedException {
+
 			//tokenization and write stripes map
-			StringTokenizer itr = new StringTokenizer(value.toString());
-			String buff = null;
-			HashMap<String, StripeMap> termMap = new HashMap<String, StripeMap>();
-			while (itr.hasMoreTokens()) { // record terms
-				term.set(itr.nextToken());
-				if (buff!=null){
-					if(!termMap.containsKey(buff)){
-						termMap.put(buff, new StripeMap());
+			Map<String, StripeMap> termMap = new HashMap<String, StripeMap>();
+			String[] tokens = value.toString().split("[\\s+\\n\\t]");
+			boolean flagExclude = false; 
+			for(String i : tokens){ // double loop
+				if (i.length() != 0){
+					for (String j : tokens){ // double loop
+						if (i.compareToIgnoreCase(j) == 0 && !flagExclude && j.length()!=0){
+							flagExclude = true;
+						} else if (j.length() != 0){
+							if(!termMap.containsKey(i)){
+								termMap.put(i, new StripeMap());
+							}
+							termMap.get(i).addup(j);
+						}
 					}
-					termMap.get(buff).addup(term.toString());
 				}
-				buff = term.toString();
 			}
-			
+
 			//double traverse term - stripes 
 			Set<String> outterKeySet = termMap.keySet();
 			for(String OKS : outterKeySet){
@@ -60,28 +65,32 @@ public class MrStripe {
 			}
 		}
 	}
-	
+
 	/**
 	 * Reducer Class
 	 */
 	public static class StripeReducer 
 	extends Reducer<Text,MapWritableWStr,Text,MapWritableWStr> {//Class Reducer<KEYIN,VALUEIN,KEYOUT,VALUEOUT>
-
+		@Override
 		public void reduce(Text key, Iterable<MapWritableWStr> values, 
 				Context context
 		) throws IOException, InterruptedException {
 			StripeMap smap = new StripeMap();
+			int normFactor = 0;						// normalization factor
 			for (MapWritableWStr val : values) {	// sum up all Map with same key
 				Set<Writable> term2 = val.keySet();
 				for (Writable k : term2) {
-					smap.addup(k.toString(), new Integer(val.get(k).toString()));
+					Integer tempCount = Integer.valueOf(val.get(k).toString());
+					smap.addup(k.toString(), tempCount);
+					normFactor = normFactor + tempCount.intValue();
 				}
 			}
-			
+
 			Set<String> stripeKeySet = smap.getKeySet();
 			for (String SKS : stripeKeySet){
 				MapWritableWStr sumMap = new MapWritableWStr();
-				sumMap.put(new Text(SKS), new IntWritable(smap.get(SKS))); // construct stripes using MapWritableWStr
+				float normScore = (float)(smap.get(SKS).intValue() )/ normFactor;
+				sumMap.put(new Text(SKS), new FloatWritable(normScore)); // construct stripes using MapWritableWStr
 				context.write(key, sumMap); // emit key - value pair to write
 			}
 		}
